# siteforge-AI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly-eval.yml
db/migrations/: README.md
db/migrations/releases/phase2/: 20260215205100_phase2_provider_config_staging.sql  20260215205200_phase2_provider_config_prod.sql  20260215205300_phase2_provider_config_single_db.sql
db/migrations/templates/: 0001_ai_training_examples_contract_template.sql  0002_ai_eval_views_template.sql  0003_phase2_provider_routing_and_eval_contract_template.sql  0004_phase3a_tenant_model_registry_template.sql
docs/adr/: 0001-phase2-provider-routing-and-eval-gates.md
docs/contracts/: training-data-contracts-v1.md
docs/roadmap/: 8-week-execution.md  phase-2-canary-and-oncall.md  phase-2-implementation-checklist.md  phase-2-runtime-integration-spec.md  phase-2-supabase-rollout-runbook.md
scripts/: bootstrap_python_env.sh
scripts/evals/: export_eval_records_from_supabase.py  generate_eval_ingest_sql.py  run_offline_eval.py
src/data_contracts/: __init__.py  runtime_phase2.py
src/evals/: __init__.py  contracts.py  ingest_sql.py  runner.py  supabase_export.py
src/inference/: __init__.py
src/training/: __init__.py
supabase/migrations/: 20260215205000_phase2_provider_routing_and_eval.sql  20260216001000_phase3a_tenant_model_registry.sql
tests/fixtures/: eval_records_gate_pass.jsonl  eval_records_sample.jsonl
tests/unit/: test_eval_ingest_sql.py  test_eval_runner.py  test_runtime_phase2_contract.py  test_supabase_export.py
